--- a/staff/anna-cuenca/frontend/app/style.css
+++ b/staff/anna-cuenca/frontend/app/style.css
@@ -38,7 +38,7 @@ form label {
     color: black;
     padding-top: 14px;
     padding-bottom: 5px;
-    margin-bottom: 0px; //poner -2
+    margin-bottom: 0px; 
     
 }
 
