--- a/staff/abel-prieto/FRONTEND/APP/style.css
+++ b/staff/abel-prieto/FRONTEND/APP/style.css
@@ -64,6 +64,15 @@ p {
     color: #FFFF;
 }
 
+
+#exit_button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color:rgb(4, 54, 146);
+    color: #FFFF;
+}
+
 #username {
     margin-left: 30px;
 }
