--- a/staff/eneko-fernandez/frontend/app/style.css
+++ b/staff/eneko-fernandez/frontend/app/style.css
@@ -1,5 +1,10 @@
 body {
     background-color: #ccc;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0;
 }
 
 * > label {
