--- a/staff/ivan-vallejos/frontend/app/style.css
+++ b/staff/ivan-vallejos/frontend/app/style.css
@@ -10,7 +10,7 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url(https://wallpapercave.com/wp/wp8046605.jpg);
+    background-image: url(https://i.gifer.com/J4o.gif);
     font-family: 'Oswald', sans-serif;
 }
 
