--- a/staff/josem-cembrano/frontend/app/style.css
+++ b/staff/josem-cembrano/frontend/app/style.css
@@ -1,67 +1,35 @@
-/* Estilo para el cuerpo de la página */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f3ecec;
-    margin: 0;
-    padding: 0;
+* {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-image: url('./NvN.gif');
+    text-align: center;
 }
 
-/* Estilo para los contenedores de registro, inicio de sesión y bienvenida */
-#register, #login, #home {
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: #fff;
+#register, #login {
+    max-width: 500px;
+    margin: 300px auto 0;
+    background: fff;
+    background-size: cover;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    display: none;
+    box-shadow: 0px 0px 10px rgba(182, 6, 6, 0.2);
+    text-align: center;
+    color: rgb(255, 235, 205);
 }
 
-/* Estilo para los títulos */
-h1 {
+#register h1, #login h1 {
     font-size: 24px;
-    margin-bottom: 20px;
 }
 
-/* Estilo para etiquetas de formulario y campos de entrada */
-label {
-    font-weight: bold;
+#registerForm, #loginForm {
+    margin-top: 20px;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-button {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 16px;
-}
-
-/* Estilo para los enlaces de registro e inicio de sesión */
-a {
-    text-decoration: none;
-    color: #0073e6;
-    font-weight: bold;
-}
-
-/* Estilo para el botón de submit */
-button[type="submit"] {
-    background-color: #0073e6;
-    color: #fff;
-    cursor: pointer;
-}
-
-/* Estilo para el botón de submit cuando se pasa el mouse por encima */
-button[type="submit"]:hover {
-    background-color: #005bb9;
-}
-
-/* Estilo para el mensaje de error */
-.error {
-    color: #ff0000;
+#registerLoginLink, #loginRegisterLink {
+    display: block;
+    text-align: center;
     margin-top: 10px;
-    font-weight: bold;
+}
+
+#home {
+    background-color: t;
 }
