--- a/staff/josem-cembrano/frontend/app/style.css
+++ b/staff/josem-cembrano/frontend/app/style.css
@@ -8,6 +8,7 @@
     max-width: 500px;
     margin: 300px auto 0;
     background-size: cover;
+    background-color: aquamarine;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(182, 6, 6, 0.2);
