--- a/staff/josem-cembrano/frontend/app/style.css
+++ b/staff/josem-cembrano/frontend/app/style.css
@@ -5,13 +5,13 @@
 }
 
 #register, #login {
-    max-width: 500px;
+    max-width: 600px;
     margin: 300px auto 0;
     background-size: cover;
-    background-color: aquamarine;
+    background-color: rgb(80, 80, 76);
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(182, 6, 6, 0.2);
+    box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.2);
     text-align: center;
     color: rgb(255, 235, 205);
 }
