--- a/staff/josem-cembrano/frontend/app-rework/style.css
+++ b/staff/josem-cembrano/frontend/app-rework/style.css
@@ -1,53 +1,24 @@
 * {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url('./NvN.gif');
     text-align: center;
 }
 
 
-#changeCredentials {
+
+#register, #login, #changeCredentials, #home {
     background-size: 125% auto;
     color: rgb(120, 126, 126);
     width: 350px;
     max-width: 100%;
     padding: 3rem;
     border-radius: 3rem;
+    margin: 300px auto 0; /* Establece márgenes automáticos izquierdo y derecho */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: .5rem;
     box-shadow: 0px 0px 70px rgb(32, 32, 32);
-    border: 3px solid #c2a145;
-}
-
-
-#settings {
-    background-color: #bd9860;;
-    color: rgb(145, 84, 6);
-    border: 0;
-    padding: 1.5rem .5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    cursor: pointer;
-    border: 2px solid #4d300a;
-    font-weight: bold;
-    box-shadow: 5px 5px 15px rgb(0, 0, 0);
-}
-
-
-
-
-#register, #login {
-    max-width: 500px;
-    margin: 300px auto 0;
-    background-size: cover;
-    background-color: aquamarine;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(182, 6, 6, 0.2);
+    border: 3px solid #2b95ec;
     text-align: center;
-    color: rgb(255, 235, 205);
 }
 
 #register h1, #login h1 {
@@ -62,8 +33,4 @@
     display: block;
     text-align: center;
     margin-top: 10px;
-}
-
-#home {
-    background-color: t;
 }
