--- a/staff/josem-cembrano/frontend/app-rework/style.css
+++ b/staff/josem-cembrano/frontend/app-rework/style.css
@@ -5,17 +5,13 @@
 
 
 
-#register, #login, #changeCredentials, #home {
+#register, #login, #home, {
     background-size: 125% auto;
     color: rgb(120, 126, 126);
     width: 350px;
     max-width: 100%;
-    padding: 3rem;
     border-radius: 3rem;
     margin: 300px auto 0; /* Establece márgenes automáticos izquierdo y derecho */
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: .5rem;
     box-shadow: 0px 0px 70px rgb(32, 32, 32);
     border: 3px solid #2b95ec;
     text-align: center;
