--- a/staff/cristian-rubert/frontend/app/style.css
+++ b/staff/cristian-rubert/frontend/app/style.css
@@ -82,3 +82,12 @@ register{
   background: #4090db;
   color: white;
 }
+
+button{
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 800;
+  background: #4090db;
+  color: white;
+
+}
