--- a/staff/isabel-dominguez/frontend/app/style.css
+++ b/staff/isabel-dominguez/frontend/app/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url('red.jpg');
+    background-image: url('madera.jpg');
     background-size: cover;
     margin: 0;
     padding: 0;
@@ -10,7 +10,8 @@ body {
     height: 100vh;
 }
 
-h1, h2 {
+h1,
+h2 {
     color: #fff;
     font-size: 24px;
     margin-bottom: 20px;
@@ -32,13 +33,13 @@ input {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    border: 3px solid #23c4cf;
+    border: 3px solid #d3940c;
     border-radius: 5px;
 }
 
 button {
     padding: 10px 20px;
-    background-color: #23c4cf;
+    background-color: #d3940c;
     color: #000000;
     border: none;
     border-radius: 5px;
@@ -68,7 +69,6 @@ div p {
     color: #000000;
 }
 
-#home #goback:hover{
-    background-color: #23c4cf;
+#home #goback:hover {
+    background-color: #d3940c;
 }
-
