--- a/staff/cristian-rubert/frontend/app/style.css
+++ b/staff/cristian-rubert/frontend/app/style.css
@@ -1,93 +1,5 @@
-body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: grey;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-}
-
-a {
-  color: white;
-}
-
-
-form{
-  background: rgb(255, 255, 255);
-  padding: 30px;
-  text-align: center;
-  border-radius: 15px;
-  width: 350px;
-}
-
-form input{
-  display: block;
-  background: none;
-  margin: 18px auto;
-  padding: 8px;
-  text-align: center;
-  border: 2px solid #4090db;
-  outline: none;
-  width: 180px;
-  font-size: 22px;
-  border-radius: 10px;
-}
-
-#login,#register{
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 800;
-  background: #4090db;
-  color: white;
-}
-
-div p {
-  color: #fff;
-  font-size: large;
-}
-
-.login{
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 800;
-  background: #4090db;
-  color: white;
-}
-
-.register{
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 800;
-  background: #4090db;
-  color: white;
-}
-
-login{
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 800;
-  background: #4090db;
-  color: white;
-}
-
-register{
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 800;
-  background: #4090db;
-  color: white;
-}
-
-button{
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 800;
-  background: #4090db;
-  color: white;
-
+.home-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
