--- a/staff/abel-prieto/FRONTEND/APP/style.css
+++ b/staff/abel-prieto/FRONTEND/APP/style.css
@@ -1,26 +1,38 @@
-.home-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.login {
+.login-view,
+.register-view {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
 }
 
-.login-form {
+.login-form,
+.register-form {
     display: flex;
     flex-direction: column;
     max-width: 240px;
     gap: 5px;
 }
 
-.register-form {
+.home-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.change-email,
+.change-password {
+    display: inline-block;
+    max-width: 240px;
+    gap: 10px; 
+}
+
+.post-view {
     display: flex;
     flex-direction: column;
-    max-width: 240px;
-    gap: 5px;
+    align-items: center;
+}
+
+.post-img {
+    max-width: 320px;
 }
