--- a/staff/abel-prieto/FRONTEND/APP.6/style.css
+++ b/staff/abel-prieto/FRONTEND/APP.6/style.css
@@ -1,11 +1,15 @@
-.view {
+.login-view,
+.register-view, 
+#new-post-view {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
 }
 
-.form {
+.login-form,
+.register-form,
+#new-post-form {
     display: flex;
     flex-direction: column;
     max-width: 240px;
@@ -18,10 +22,18 @@
     justify-content: space-between;
 }
 
-.settings {
+.change-email,
+.change-password {
     display: inline-block;
+    align-items: center;
     max-width: 240px;
     gap: 10px; 
+}
+
+.post-view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .post-img {
