--- a/staff/isabel-dominguez/frontend/app.2/style.css
+++ b/staff/isabel-dominguez/frontend/app.2/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url('R.jpg');
+    background-image: url('madera.jpg');
     background-size: cover;
     margin: 0;
     padding: 0;
@@ -12,16 +12,13 @@ body {
 
 h1,
 h2 {
-    color: #000000;
+    color: #fff;
     font-size: 24px;
     margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 form {
-    color: #000000;
+    color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,14 +33,14 @@ input {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    border: 3px solid #ad6faf;
+    border: 3px solid #d3940c;
     border-radius: 5px;
 }
 
 button {
     padding: 10px 20px;
-    background-color: #ad6faf;
-    color: #fff;
+    background-color: #d3940c;
+    color: #000000;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -51,16 +48,16 @@ button {
 }
 
 button:hover {
-    background-color: #000000;
+    background-color: #fff;
 }
 
 div a {
-    color: #000000;
+    color: #fff;
     line-height: 4;
 }
 
 div p {
-    color: #000000;
+    color: #fff;
     font-size: large;
 }
 
@@ -68,22 +65,10 @@ div p {
     position: absolute;
     bottom: 20px;
     left: 20px;
-    background-color: #000000;
-    color: #fff;
+    background-color: #fff;
+    color: #000000;
 }
 
 #home #goback:hover {
-    background-color: #ad6faf;
-}
-
-#home-link {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-}
-
-.profile-link {
-    position: absolute;
-    top: 9px;
-    left: 20px;
+    background-color: #d3940c;
 }
