--- a/staff/belen-ivars/frontend/app/style.css
+++ b/staff/belen-ivars/frontend/app/style.css
@@ -4,3 +4,35 @@
 	justify-content: space-between;
 
 }
+
+#login-view,
+#register-view,
+#new-post-view,
+#profile-view {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+
+}
+
+.login-form,
+.register-form,
+.new-post-form,
+#change-email-form,
+#change-password-form {
+	display: flex;
+	flex-direction: column;
+	max-width: 240px;
+	gap: 5px;
+}
+
+.post {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.post-image {
+	max-width: 320px;
+}
