--- a/staff/anna-cuenca/frontend/app/style.css
+++ b/staff/anna-cuenca/frontend/app/style.css
@@ -1,77 +1,30 @@
-
-
-
-* {
-    box-sizing: border-box;
-    font-family: sans-serif;
-    border: 0px;
-}
-
-body {
+.home-header {
     display: flex;
     align-items: center;
-    justify-content: center;
-    background: linear-gradient(to right, rgb(217, 232, 234), rgb(17, 182, 182))
-
-}
-
-#login {
-    font-size: 20px;
-    margin-bottom: 10px;
-    text-align: center;
+    justify-content: space-between;
 }
 
 
-form {
+.view {
     display: flex;
     flex-direction: column;
-    background: transparent;
-    text-align: center;
-    padding: 18px 37px;
-    box-shadow: 0 5px 10px black
-    
-    
+    align-items: center;
+    gap: 10px;
 }
 
-form label {
-    
-    color: black;
-    padding-top: 14px;
-    padding-bottom: 5px;
-    margin-bottom: 0px; 
-    
+.form {
+    display: flex;
+    flex-direction: column;
+    max-width: 240px;
+    gap: 5px;
 }
 
-
-#email {
-    outline: none;
-    border: none;
-    color:rgb(10, 11, 11);
-    border-bottom: solid 2px rgb(6, 6, 6);
+.post {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-
-#password {
-    outline: none;
-    border: none;
-    color:rgb(10, 11, 11);
-    border-bottom: solid 2px rgb(6, 6, 6);
+.post-image {
+    max-width: 320px;
 }
-
-
-form button {
-    color: #fff;
-    border: none;
-    background: linear-gradient(to right, rgb(234 217 226), rgb(17, 182, 182));
-    padding: 10px 15px;
-    cursor: pointer;
-    font-size: 20px;
-    margin: 20px;
-
-}
-
-p {
-    color: rgb(241, 235, 235);
-}
-
-
