--- a/staff/isabel-dominguez/frontend/app/style.css
+++ b/staff/isabel-dominguez/frontend/app/style.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
+* {
+    font-family: Inter;
+}
+
 body {
-    font-family: Georgia, "Times New Roman", Times, serif;
     background-image: url("R.jpg");
 }
 
