--- a/staff/belen-ivars/frontend/app/style.css
+++ b/staff/belen-ivars/frontend/app/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+* {
+	font-family: Inter;
+}
+
 .home-header {
 	display: flex;
 	align-items: center;
