--- a/staff/isabel-dominguez/frontend/app/style.css
+++ b/staff/isabel-dominguez/frontend/app/style.css
@@ -14,6 +14,22 @@ body {
     justify-content: space-between;
 }
 
+.home-link {
+    text-decoration: none;
+    color: #ad6faf;
+    font-size: 24px;
+    font-weight: bold;
+    border: 2px solid #ad6faf;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.home-link:hover {
+    background-color: #d8bad8;
+    color: #fff;
+}
+
 .view {
     display: flex;
     flex-direction: column;
