--- a/staff/josem-cembrano/frontend/app/style.css
+++ b/staff/josem-cembrano/frontend/app/style.css
@@ -1,35 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 * {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url('./NvN.gif');
-    text-align: center;
+    font-family: Inter;
 }
 
-#register, #login {
-    max-width: 600px;
-    margin: 300px auto 0;
-    background-size: cover;
-    background-color: rgb(80, 80, 76);
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.2);
-    text-align: center;
-    color: rgb(255, 235, 205);
+.home-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-#register h1, #login h1 {
-    font-size: 24px;
+.view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
-#registerForm, #loginForm {
-    margin-top: 20px;
+.form {
+    display: flex;
+    flex-direction: column;
+    max-width: 240px;
+    gap: 5px;
 }
 
-#registerLoginLink, #loginRegisterLink {
-    display: block;
-    text-align: center;
-    margin-top: 10px;
+.post {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#home {
-    background-color: t;
+.post-image {
+    max-width: 320px;
 }
