--- a/staff/anna-cuenca/frontend/app/src/index.css
+++ b/staff/anna-cuenca/frontend/app/src/index.css
@@ -1,77 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 /* resets */
-
 * {
-    font-family: Inter;
-    font-size: 1rem;
+  font-family: Inter;
+  font-size: 1rem;
 }
 
-
-
 /* library */
-
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    max-width: 240px;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  max-width: 240px;
+  gap: 5px;
 }
 
 .label {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .input {
-    border: 2px solid black;
-    padding: 5px;
+  border: 2px solid black;
+  padding: 5px;
 }
 
 .button {
-    border: 2px solid black;
-    padding: 5px;
-    background: transparent;
-    font-weight: bold;
+  border: 2px solid black;
+  padding: 5px;
+  background: transparent;
+  font-weight: bold;
 }
 
 .link {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 .link:visited {
-    color: black;
+  color: black;
 }
-
 .link::before {
-    content: '[ '
+  content: "[ ";
 }
-
 .link::after {
-    content: ' ]'
+  content: " ]";
 }
 
 /* custom compos */
-
 .home-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .post {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.post-image {
+  max-width: 320px;
 }
 
-.post-image {
-    max-width: 320px;
-}
+/*# sourceMappingURL=index.css.map */
