--- a/staff/josem-cembrano/frontend/vite/src/index.css
+++ b/staff/josem-cembrano/frontend/vite/src/index.css
@@ -1,75 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 /* resets */
-
 * {
-    font-family: Inter;
-    font-size: 1rem;
+  font-family: Inter;
+  font-size: 1rem;
 }
 
-/* library */
+html {
+  scroll-behavior: smooth;
+}
 
+html, body {
+  margin: 0;
+}
+
+/* variables */
+/* library */
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    max-width: 240px;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  max-width: 240px;
+  gap: 5px;
 }
 
 .label {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .input {
-    border: 2px solid black;
-    padding: 5px;
+  border: 2px solid black;
+  padding: 5px;
 }
 
 .button {
-    border: 2px solid black;
-    padding: 5px;
-    background-color: transparent;
-    font-weight: bold;
+  border: 2px solid black;
+  padding: 5px;
+  background-color: transparent;
+  font-weight: bold;
 }
 
 .link {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
-
 .link:visited {
-    color: black
+  color: black;
 }
-
 .link::before {
-    content: '[ ';
+  content: "[ ";
 }
-
 .link::after {
-    content: ' ]';
+  content: " ]";
 }
 
 /* custom compos */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem;
+}
 
-.home-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.new-post {
+  margin-bottom: 1rem;
 }
 
 .post {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.post-image {
+  max-width: 320px;
+}
+.post-actions {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
 }
 
-.post-image {
-    max-width: 320px;
+.posts {
+  background-color: yellow;
+  margin-bottom: 3rem;
 }
+
+@media (min-width: 768px) {
+  .posts {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 1024px) {
+  .posts {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.footer {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  min-height: 3rem;
+}
+
+/*# sourceMappingURL=index.css.map */
