--- a/staff/abel-prieto/FRONTEND/APP/VITE/APP.4/src/index.sass
+++ b/staff/abel-prieto/FRONTEND/APP/VITE/APP.4/src/index.sass
@@ -14,6 +14,10 @@ body
 
 // VARIABLES
 
+$m-size: 768px
+$l-size: 1024px
+$footer-h: 3rem
+
 // LIBRARY
 
 input
@@ -67,6 +71,9 @@ input
 
 // COMPONENTS
 
+.home-view
+    padding-top: 85px
+
 .home-header
     display: flex
     position: fixed
@@ -91,6 +98,13 @@ input
     &-img
         max-width: 320px
 
+    &-comments
+        font: italic
+        border-radius: 0
+        height: 50px
+        width: 310px
+        margin-bottom: 0.5rem
+
 .new-post
     margin: 10px
 
@@ -110,3 +124,13 @@ input
     min-height: 40px
 
 // QUERYS
+
+@media (min-width: $m-size)
+    .container
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+
+@media (min-width: $l-size)
+    .container
+        display: grid
+        grid-template-columns: repeat(3, 1fr)
