--- a/staff/belen-ivars/frontend/app/src/index.css
+++ b/staff/belen-ivars/frontend/app/src/index.css
@@ -3,7 +3,6 @@
 * {
   font-family: Inter;
   font-size: 1rem;
-  background-color: beige;
 }
 
 html {
@@ -12,6 +11,8 @@ html {
 
 html, body {
   margin: 0;
+  background: linear-gradient(to bottom right, #8C1B8C, #26C2C7);
+  background-attachment: fixed;
 }
 
 /* variables */
@@ -40,11 +41,15 @@ html, body {
 }
 
 .button {
-  border: 2px solid black;
-  border-radius: 5px;
+  border: 1px solid black;
   padding: 5px;
   background-color: silver;
+  border-radius: 5px;
   font-weight: bold;
+  cursor: pointer;
+}
+.button-menu {
+  align-self: start;
 }
 
 .link {
@@ -67,6 +72,8 @@ html, body {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem;
+  background-color: white;
+  border-block-end: 0.3rem solid black;
 }
 
 .new-post {
@@ -78,9 +85,15 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0.7rem;
+  border: 0.3rem solid black;
+  padding: 1rem;
+  background-color: #F2EDF8;
 }
 .post-image {
   max-width: 320px;
+  max-height: 320px;
+  border: 1rem inset;
 }
 .post-actions {
   display: flex;
@@ -114,6 +127,13 @@ html, body {
   bottom: 0;
   width: 100%;
   min-height: 3rem;
+  border-block-start: 0.3rem solid black;
+}
+.footer-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
 }
 
 /*# sourceMappingURL=index.css.map */
