--- a/staff/belen-ivars/frontend/app/src/index.sass
+++ b/staff/belen-ivars/frontend/app/src/index.sass
@@ -5,13 +5,14 @@
 *
 	font-family: Inter
 	font-size: 1rem
-	background-color: beige
 
 html
 	scroll-behavior: smooth
 
 html, body
 	margin: 0
+	background: linear-gradient(to bottom right, #8C1B8C, #26C2C7)
+	background-attachment: fixed
 
 /* variables */
 
@@ -41,11 +42,15 @@ $footer-h: 3rem
 	padding: 5px
 
 .button
-	border: 2px solid black
-	border-radius: 5px
+	border: 1px solid black
 	padding: 5px
 	background-color: silver
+	border-radius: 5px
 	font-weight: bold
+	cursor: pointer
+
+	&-menu
+		align-self: start
 
 .link
 	text-decoration: none
@@ -67,6 +72,8 @@ $footer-h: 3rem
 	align-items: center
 	justify-content: space-between
 	padding: .5rem
+	background-color: white
+	border-block-end: .3rem solid black
 
 .new-post
 	margin-bottom: 1rem
@@ -76,9 +83,15 @@ $footer-h: 3rem
 	display: flex
 	flex-direction: column
 	align-items: center
+	margin: .7rem
+	border: .3rem solid black
+	padding: 1rem
+	background-color: #F2EDF8
 
 	&-image
 		max-width: 320px
+		max-height: 320px
+		border: 1rem inset
 
 	&-actions
 		display: flex
@@ -108,3 +121,10 @@ $footer-h: 3rem
 	bottom: 0
 	width: 100%
 	min-height: $footer-h
+	border-block-start: .3rem solid black
+
+	&-menu
+		display: flex
+		flex-direction: row
+		justify-content: space-around
+		width: 100%
