--- a/staff/anna-cuenca/frontend/app/src/index.css
+++ b/staff/anna-cuenca/frontend/app/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
 /* resets */
 * {
   font-family: Inter;
@@ -9,7 +10,8 @@ html {
   scroll-behavior: smooth;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   /* variables */
 }
@@ -48,12 +50,15 @@ html, body {
 .link {
   text-decoration: none;
 }
+
 .link:visited {
   color: black;
 }
+
 .link::before {
   content: "[ ";
 }
+
 .link::after {
   content: " ]";
 }
@@ -75,9 +80,11 @@ html, body {
   flex-direction: column;
   align-items: center;
 }
+
 .post-image {
   max-width: 320px;
 }
+
 .post-actions {
   display: flex;
   justify-content: space-between;
@@ -85,7 +92,7 @@ html, body {
 }
 
 .posts {
-  background-color: yellow;
+  background-color: rgb(255, 255, 255);
   margin-bottom: 3rem;
 }
 
@@ -95,12 +102,14 @@ html, body {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 @media (min-width: 1024px) {
   .posts {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 .footer {
   background-color: white;
   display: flex;
