transcription edit buttom and change some style with sass

--- a/staff/josem-cembrano/frontend/vite/src/index.sass
+++ b/staff/josem-cembrano/frontend/vite/src/index.sass
@@ -43,6 +43,7 @@ $footer-h: 3rem
     border: 2px solid black
     padding: 5px
     background-color: transparent
+    color: deepskyblue
     font-weight: bold
 
 .link
@@ -69,10 +70,14 @@ $footer-h: 3rem
 .new-post
     margin-bottom: 1rem
 
+.color-name
+    color: tomato
+
 .post
     display: flex
     flex-direction: column
     align-items: center
+    color: aliceblue
 
     &-image
         max-width: 320px
@@ -83,7 +88,7 @@ $footer-h: 3rem
         gap: .5rem
 
 .posts
-    background-color: yellow
+    background-color: rgb(10, 10, 10)
     margin-bottom: $footer-h
 
 @media (min-width: $m-size)
