--- a/staff/josem-cembrano/frontend/vite/src/index.css
+++ b/staff/josem-cembrano/frontend/vite/src/index.css
@@ -42,6 +42,7 @@ html, body {
   border: 2px solid black;
   padding: 5px;
   background-color: transparent;
+  color: deepskyblue;
   font-weight: bold;
 }
 
@@ -71,10 +72,15 @@ html, body {
   margin-bottom: 1rem;
 }
 
+.color-name {
+  color: tomato;
+}
+
 .post {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: aliceblue;
 }
 .post-image {
   max-width: 320px;
@@ -86,7 +92,7 @@ html, body {
 }
 
 .posts {
-  background-color: yellow;
+  background-color: rgb(10, 10, 10);
   margin-bottom: 3rem;
 }
 
