--- a/staff/luis-felipe-garcia/frontend-manu-literal/app/src/index.sass
+++ b/staff/luis-felipe-garcia/frontend-manu-literal/app/src/index.sass
@@ -12,6 +12,7 @@ html
 
 html, body
     margin: 0
+    height: 100%
 
 /* variables */
 $s-size: 320px
@@ -27,6 +28,21 @@ $margin-top: 3.5rem
     gap: 5px
     margin-top: $margin-top
 
+    &-login-principal
+        background-image: url(https://e0.pxfuel.com/wallpapers/419/93/desktop-wallpaper-peter-pan-by-untamedunwanted-peter-pan-peter-pan-disney-peter-pan-art-peter-pan-flying.jpg)
+        background-size: cover
+        background-position: bottom right
+        height: 100vh
+        display: flex
+        align-items: center
+        justify-content: center
+
+    &-body-login
+        background-position: bottom right
+        background-color: transparent
+
+        margin-top: 0
+
 .container-change-email, .container-change-password
     display: flex
     flex-direction: column
@@ -38,6 +54,9 @@ $margin-top: 3.5rem
     max-width: 280px
     min-width: 220px
     gap: 5px
+
+    &-login
+        background-color: transparent
 
 .container-buttons
     display: flex
@@ -52,6 +71,8 @@ $margin-top: 3.5rem
     border-radius: 5px
     padding: 5px
 
+#login-tittle, #email-input, #password-input, .label, #register-link, #form-login
+    background-color: transparent
 .button
     border: 2px solid black
     border-radius: 5px
@@ -77,7 +98,7 @@ $margin-top: 3.5rem
     color: white
 
     &:visited
-        color: black
+        color: white
 
 .text-menu
 
@@ -164,16 +185,8 @@ $margin-top: 3.5rem
     width: 100%
     min-height: $footer-h
 
-.body-login
-    background-image: url(https://e0.pxfuel.com/wallpapers/419/93/desktop-wallpaper-peter-pan-by-untamedunwanted-peter-pan-peter-pan-disney-peter-pan-art-peter-pan-flying.jpg)
-    background-position: bottom right
-    background-repeat: no-repeat
-    color: white
-
 .icons
     max-width: 30px
 
     &-delete
         max-height: 25px
-
-
