--- a/staff/luis-felipe-garcia/frontend-manu-literal/app/src/index.css
+++ b/staff/luis-felipe-garcia/frontend-manu-literal/app/src/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
-
 * {
   font-family: Inter;
   font-size: 1rem;
@@ -11,8 +10,7 @@ html {
   scroll-behavior: smooth;
 }
 
-html,
-body {
+html, body {
   margin: 0;
   height: 100%;
 }
@@ -25,7 +23,6 @@ body {
   gap: 5px;
   margin-top: 3.5rem;
 }
-
 .container-login-principal {
   background-image: url(https://e0.pxfuel.com/wallpapers/419/93/desktop-wallpaper-peter-pan-by-untamedunwanted-peter-pan-peter-pan-disney-peter-pan-art-peter-pan-flying.jpg);
   background-size: cover;
@@ -35,15 +32,13 @@ body {
   align-items: center;
   justify-content: center;
 }
-
 .container-body-login {
   background-position: bottom right;
   background-color: transparent;
   margin-top: 0;
 }
 
-.container-change-email,
-.container-change-password {
+.container-change-email, .container-change-password {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,7 +51,6 @@ body {
   min-width: 220px;
   gap: 5px;
 }
-
 .form-login {
   background-color: transparent;
 }
@@ -77,12 +71,7 @@ body {
   padding: 5px;
 }
 
-#login-tittle,
-#email-input,
-#password-input,
-.label,
-#register-link,
-#form-login {
+#login-tittle, #email-input, #password-input, .label, #register-link, #form-login {
   background-color: transparent;
 }
 
@@ -94,7 +83,6 @@ body {
   min-width: 40px;
   max-height: 30px;
 }
-
 .button-login {
   background-color: white;
   color: black;
@@ -111,7 +99,6 @@ body {
   text-decoration: none;
   color: white;
 }
-
 .link:visited {
   color: white;
 }
@@ -119,7 +106,6 @@ body {
 .text-menu::before {
   content: "[ ";
 }
-
 .text-menu::after {
   content: " ]";
 }
@@ -135,7 +121,6 @@ body {
   display: flex;
   justify-content: center;
 }
-
 .header-content {
   max-width: 320px;
   display: flex;
@@ -155,12 +140,10 @@ body {
   margin-bottom: 20px;
   max-width: 320px;
 }
-
 .post-image {
   width: 100%;
   border-radius: 5px;
 }
-
 .post-actions {
   display: flex;
   justify-content: space-between;
@@ -168,13 +151,11 @@ body {
   width: 100%;
   gap: 1rem;
 }
-
 .post-author {
   display: flex;
   justify-content: flex-end;
   width: 100%;
 }
-
 .post-comment {
   margin: 0;
   width: 100%;
@@ -195,14 +176,12 @@ body {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
 @media (min-width: 1024px) {
   .posts {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 }
-
 .footer {
   background-color: black;
   display: flex;
@@ -218,7 +197,6 @@ body {
 .icons {
   max-width: 30px;
 }
-
 .icons-delete {
   max-height: 25px;
 }
