--- a/staff/abel-prieto/PROYECT/HiInit/src/index.sass
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.sass
@@ -4,14 +4,14 @@
   font-family: Hack,monospace
 
 body
-  margin: 0
-
+  margin: 5px
 p
   color: white
-  margin-bottom: 0
+  margin-bottom: 0px
 
 a
   color: white
+  text-decoration: none
 
   &:hover
     color: grey
@@ -25,7 +25,6 @@ a
   border-style: solid
   border-color: rgb(255 128 55)
   border-radius: 0.25rem
-  min-height: 498px
   padding-left: 20px
   padding-top: 15px
 
@@ -36,6 +35,15 @@ a
 
   p
     margin: 0
+
+.field-order
+  display: flex
+  align-items: center
+
+.field-order input
+  margin: 0 10px
+  border: none
+  color: white
 
 .sign
   margin-top: auto
