--- a/staff/abel-prieto/PROYECT/HiInit/src/index.sass
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.sass
@@ -1,4 +1,18 @@
 
+@media (min-width: 768px)
+.md\:text-base
+  font-size: 1rem
+  line-height: 1.5rem
+
+@media (min-width: 768px)
+.md\:min-w-full
+  min-width: 100%
+
+@media (prefers-color-scheme: dark)
+.dark\:text-dark-foreground
+  --tw-text-opacity: 1
+  color: rgb(235 219 178/var(--tw-text-opacity))
+
 *
   background-color: #1e252e
   font-family: Hack,monospace
@@ -36,6 +50,13 @@ a
   p
     margin: 0
 
+.info p
+  margin: 0
+
+.info-contact a
+  display: block
+  margin-bottom: 5px
+
 .field-order
   display: flex
   align-items: center
@@ -46,18 +67,6 @@ a
   color: white
 
 .sign
-  margin-top: auto
+  align-items: end
   text-align: left
-  padding: 10px
-  padding: 0
-
-.info p
-  margin: 0
-
-  :about p,
-  :contact p
-    margin: 0
-
-.info-contact a
-  display: block
   margin-bottom: 5px
