--- a/staff/abel-prieto/PROYECT/HiInit/src/index.css
+++ b/staff/abel-prieto/PROYECT/HiInit/src/index.css
@@ -1,17 +1,3 @@
-.md\:text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.md\:min-w-full {
-  min-width: 100%;
-}
-
-.dark\:text-dark-foreground {
-  --tw-text-opacity: 1;
-  color: rgb(235 219 178/var(--tw-text-opacity));
-}
-
 * {
   background-color: #1e252e;
   font-family: Hack, monospace;
@@ -47,6 +33,11 @@ a:active {
   padding-top: 15px;
 }
 
+.container {
+  overflow-y: auto;
+  height: 100%;
+}
+
 .tittle-logo {
   white-space: pre;
   font-family: monospace;
@@ -80,6 +71,25 @@ a:active {
   align-items: end;
   text-align: left;
   margin-bottom: 5px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1e252e;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ebdbb2;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ff8037;
 }
 
 /*# sourceMappingURL=index.css.map */
