--- a/staff/eneko-fernandez/fullstack/app/src/index.css
+++ b/staff/eneko-fernandez/fullstack/app/src/index.css
@@ -73,15 +73,11 @@ html, body {
 
 .post {
   display: flex;
-
   flex-direction: column;
   align-items: center;
 }
 .post-image {
   max-width: 320px;
-  border: 1px solid gray;
-  border-radius: 1rem;
-  box-shadow: 1px 1px 2px black;
 }
 .post-actions {
   display: flex;
@@ -90,8 +86,7 @@ html, body {
 }
 
 .posts {
-  background-color: lightgray;
-  border-radius: 1rem;
+  background-color: yellow;
   margin-bottom: 3rem;
 }
 
