add COM field on FULLSTACK; refactor and add general errors with Context & useContext to all pages #282

--- a/staff/abel-prieto/FULLSTACK/APP/src/index.sass
+++ b/staff/abel-prieto/FULLSTACK/APP/src/index.sass
@@ -41,6 +41,14 @@ input
     align-items: center
     gap: 10px
 
+.container--horizontal
+    position: fixed
+    width: 100%
+    padding-bottom: 10px
+    box-sizing: border-box
+    top: 86px
+    z-index: 1
+
 .form
     color: rgb(43, 40, 40)
     border-style: groove
@@ -87,6 +95,7 @@ input
     padding-left: 10px
     padding-right: 10px
     margin-bottom: 50px
+    z-index: 2
 
 .post
     border-style: groove
