--- a/staff/abel-prieto/FULLSTACK/APP/src/index.css
+++ b/staff/abel-prieto/FULLSTACK/APP/src/index.css
@@ -36,6 +36,15 @@ input {
   gap: 10px;
 }
 
+.container--horizontal {
+  position: fixed;
+  width: 100%;
+  padding-bottom: 10px;
+  box-sizing: border-box;
+  top: 86px;
+  z-index: 1;
+}
+
 .form {
   color: rgb(43, 40, 40);
   border-style: groove;
@@ -83,6 +92,7 @@ input {
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 50px;
+  z-index: 2;
 }
 
 .post {
